# cykeldator

./: .clang-format  .gitignore  CMakeLists.txt  button_testdata.txt  makefile  readme.txt  signal_processing.txt  upload.gdb
cmake/: stm32_toolchain.cmake
context/: context.cpp  context.h  fiber_context.h  main.cpp  makefile
context/linux/: main.cpp  makefile
display/: Print.h  SPI  SPI.h  makefile  test.cpp
doc/: signal_processing.txt  user_interface.txt
doc/presentation/: embedded.md  makefile  presentation.html
hardware/: cykeldator.scad  readme.txt
mcu_src/: App.cpp  App.h  CMakeLists.txt  HwPort.h  I2c.cpp  I2c.h  Lcd.cpp  Lcd.h  TimeSource.cpp  TimeSource.h  cover.cpp  cover.h  debug.gdb  isr.cpp  isr.h  isr_project.h  israccess.h  israccess_test.cpp  main.cpp  makefile  mcuaccess.cpp  mcuaccess.h  mcuif_test.cpp  openocd.cfg  out.hex  startup_stm32f10x_md.s  system_stm32f10x.c  system_stm32f10x.h  timer.c  timer.cpp  timer.h  timer_test.cpp  usart.cpp  usart.h
mcu_src/old/: Makefile  timer.h  usart.h
src/: App.cpp  App.h  CMakeLists.txt  DistanceCalc.cpp  DistanceCalc.h  Lcd.cpp  Lcd.h  RawSignalCondition.cpp  RawSignalCondition.h  RingBuffer.h  SignalChain.cpp  SignalChain.h  SignalChain_test.cpp  SlotTracker.cpp  SlotTracker.h  Strings.cpp  Strings.h  TickPoint.cpp  TickPoint.h  TickPoint_test.cpp  interpreter.cpp  timer_test.cpp
src/host_main/: CMakeLists.txt  main.cpp
src/interpreter/: interpreter.cpp
src/target_main/: CMakeLists.txt  main.cpp  system_stm32f10x.h
test_data/run_20190414-100000/: cykeldump.txt  hastighet.txt  readme.txt  test_dump.py
test_data/run_20190421/: cykeldump2.txt
